UserCollection Singleton // DayCalendar info update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
         <activity android:name=".Calendar.CalendarView"></activity>
 
+        <activity android:name=".crud.DayMemoCalendar"></activity>
+
     </application>
 
 </manifest>
