--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Calendar.CalendarView"></activity>
-
+        <activity android:name=".GoogleOAuth"></activity>
         <activity android:name=".crud.DayCalendar"></activity>
 
     </application>
