--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SignUpActivity"></activity>
         <activity android:name=".Calendar.CalendarView"></activity>
         <activity android:name=".GoogleOAuth"></activity>
         <activity android:name=".crud.DayCalendar"></activity>
